--- a/Health_analysis.ipynb
+++ b/Health_analysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPWFFMCEYNZQjn0YLM8Y9px",
+      "authorship_tag": "ABX9TyPAOSy2nBajD8KQwUNHISpp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 1,
       "metadata": {
         "id": "rxLODtHVCR0W"
       },
@@ -51,9 +51,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Xopgf-l7D68t",
-        "outputId": "9e273937-26bb-4f23-eb05-fc2fea2020e0"
+        "outputId": "5656f4cb-c6ba-4a3b-bbff-819f3a797681"
       },
-      "execution_count": 6,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -73,13 +73,13 @@
           "height": 206
         },
         "id": "cbd51a2c",
-        "outputId": "642387c3-5c36-4ac4-deeb-ba8aeb2bb93e"
+        "outputId": "6ada543f-3018-4add-fb10-72e80f3347ee"
       },
       "source": [
         "df = pd.read_csv(os.path.join(path, 'diabetes.csv'))\n",
         "display(df.head())"
       ],
-      "execution_count": 7,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "display_data",
@@ -101,7 +101,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-70b12bbe-2acb-46d5-8e15-22fe31cc1c6c\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-4055d436-b9d1-45de-8efd-edab13ba0dc5\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -198,7 +198,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-70b12bbe-2acb-46d5-8e15-22fe31cc1c6c')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4055d436-b9d1-45de-8efd-edab13ba0dc5')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -250,12 +250,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-70b12bbe-2acb-46d5-8e15-22fe31cc1c6c button.colab-df-convert');\n",
+              "        document.querySelector('#df-4055d436-b9d1-45de-8efd-edab13ba0dc5 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-70b12bbe-2acb-46d5-8e15-22fe31cc1c6c');\n",
+              "        const element = document.querySelector('#df-4055d436-b9d1-45de-8efd-edab13ba0dc5');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -275,8 +275,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-559c9473-8615-49c9-9c38-8da36c9d334a\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-559c9473-8615-49c9-9c38-8da36c9d334a')\"\n",
+              "    <div id=\"df-4d351d66-038b-41e9-8400-d123590d170f\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-4d351d66-038b-41e9-8400-d123590d170f')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -395,7 +395,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-559c9473-8615-49c9-9c38-8da36c9d334a button');\n",
+              "            document.querySelector('#df-4d351d66-038b-41e9-8400-d123590d170f button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -426,9 +426,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2n-p8aSTHTKy",
-        "outputId": "8ac61166-0234-4d75-c7eb-2486389adfb3"
+        "outputId": "4774c6c7-13ce-49fe-f3e4-b161ff81b37e"
       },
-      "execution_count": 17,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -451,27 +451,25 @@
         ")\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 193
-        },
-        "id": "WEHBRp7QH_Ja",
-        "outputId": "86d5e09c-2902-4c40-b729-1df8576d36fd"
+        "id": "WEHBRp7QH_Ja"
       },
-      "execution_count": 16,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'X' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-1319031631.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m X_train, X_test, y_train, y_test = train_test_split(\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrandom_state\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m42\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstratify\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m )\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'X' is not defined"
-          ]
-        }
-      ]
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.preprocessing import StandardScaler\n",
+        "\n",
+        "scaler = StandardScaler()\n",
+        "X_train_scaled = scaler.fit_transform(X_train)\n",
+        "X_test_scaled = scaler.transform(X_test)\n"
+      ],
+      "metadata": {
+        "id": "XF0XYFptgLtj"
+      },
+      "execution_count": 6,
+      "outputs": []
     }
   ]
 }
