--- a/Disease_predication.ipynb
+++ b/Disease_predication.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNo/ozr9N5DoHyjo0h7W4Ll",
+      "authorship_tag": "ABX9TyPNgS5Lyc1mhETmWBbjMQx+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -118,6 +118,86 @@
       },
       "execution_count": 3,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def train_breast_cancer():\n",
+        "    print(\"\\n--- Training Breast Cancer Model ---\")\n",
+        "    path = kagglehub.dataset_download(\"uciml/breast-cancer-wisconsin-data\")\n",
+        "    print(\"Dataset path:\", path)\n",
+        "\n",
+        "    files = os.listdir(path)\n",
+        "    csv_file = [f for f in files if f.endswith('.csv')][0]\n",
+        "    df = pd.read_csv(os.path.join(path, csv_file))\n",
+        "\n",
+        "    # Drop unnecessary columns\n",
+        "    if 'id' in df.columns:\n",
+        "        df = df.drop('id', axis=1)\n",
+        "    if 'Unnamed: 32' in df.columns:\n",
+        "        df = df.drop('Unnamed: 32', axis=1)\n",
+        "\n",
+        "    # User requested specific features potentially, but for now we train on all standard numeric features\n",
+        "    # 'diagnosis' is target (M/B). Map to 1/0\n",
+        "    df['diagnosis'] = df['diagnosis'].map({'M': 1, 'B': 0})\n",
+        "\n",
+        "    X = df.drop('diagnosis', axis=1)\n",
+        "    y = df['diagnosis']\n",
+        "\n",
+        "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)\n",
+        "\n",
+        "    scaler = StandardScaler()\n",
+        "    X_train_scaled = scaler.fit_transform(X_train)\n",
+        "    X_test_scaled = scaler.transform(X_test)\n",
+        "\n",
+        "    model = RandomForestClassifier(random_state=42)\n",
+        "    model.fit(X_train_scaled, y_train)\n",
+        "\n",
+        "    print(\"Accuracy:\", accuracy_score(y_test, model.predict(X_test_scaled)))\n",
+        "\n",
+        "    joblib.dump(model, \"breast_cancer_model.pkl\")\n",
+        "    joblib.dump(scaler, \"breast_cancer_scaler.pkl\")\n",
+        "    print(\"Saved breast_cancer_model.pkl and breast_cancer_scaler.pkl\")\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    train_diabetes()\n",
+        "    train_heart()\n",
+        "    train_breast_cancer()\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NTHrx7WKvVdm",
+        "outputId": "144de637-6c5e-4263-d09a-3cf1d5732d4d"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "--- Training Diabetes Model ---\n",
+            "Using Colab cache for faster access to the 'pima-indians-diabetes-database' dataset.\n",
+            "Dataset path: /kaggle/input/pima-indians-diabetes-database\n",
+            "Accuracy: 0.7597402597402597\n",
+            "Saved diabetes_model.pkl and diabetes_scaler.pkl\n",
+            "\n",
+            "--- Training Heart Disease Model ---\n",
+            "Using Colab cache for faster access to the 'heart-disease-dataset' dataset.\n",
+            "Dataset path: /kaggle/input/heart-disease-dataset\n",
+            "Accuracy: 1.0\n",
+            "Saved heart_model.pkl and heart_scaler.pkl\n",
+            "\n",
+            "--- Training Breast Cancer Model ---\n",
+            "Using Colab cache for faster access to the 'breast-cancer-wisconsin-data' dataset.\n",
+            "Dataset path: /kaggle/input/breast-cancer-wisconsin-data\n",
+            "Accuracy: 0.9736842105263158\n",
+            "Saved breast_cancer_model.pkl and breast_cancer_scaler.pkl\n"
+          ]
+        }
+      ]
     }
   ]
 }
